# Extractly

./: .env.example  .gitignore  Makefile  README.md  master_implementation_plan.md  pyproject.toml
.agents/skills/software_engineer/: SKILL.md
src/extractly/: __init__.py  __main__.py  config.py  main.py
src/extractly/clients/: __init__.py  gemini_client.py
src/extractly/models/: __init__.py  extraction.py  template.py
src/extractly/services/: __init__.py  batch_engine.py  excel_writer.py  html_writer.py  template_scout.py
tests/: conftest.py
tests/unit/: test_batch_engine.py  test_config.py  test_excel_writer.py  test_gemini_client.py  test_html_writer.py  test_models.py  test_template_scout.py
